fix(MarketOutcomes): align items to end

--- a/src/components/Market/MarketOutcomes.module.scss
+++ b/src/components/Market/MarketOutcomes.module.scss
@@ -1,3 +1,7 @@
+.root {
+  align-items: flex-end !important;
+}
+
 .tradeModal {
   &Dialog {
     position: absolute;
